hphp/hack/test/typecheck/shape/shape_field_check/shape_idx_with_default_argument.php
<?hh // strict

class TestClass {
  const string ID = 'id';
  const string X = 'x';

  const type TClassType = shape(
    self::ID => int,
    'x' => int,
  );

  public function test(self::TClassType $s): void {
    Shapes::idx($s, 'xy', 0);
  }
}
